--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   
     <header class="header">
-      <div class="logo"><img src="ic-logo.svg">COLMAR<span>ACADEMY</span></div>
+      <div class="logo"><img src="Resources/ic-logo.svg">COLMAR<span>ACADEMY</span></div>
         <nav class="nav">
             <a href="#">On Campus</a>
             <a href="#">Online</a>
